--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ disqus_site_shortname: "PIEA"
 author:
   name      : PIEA
   job       : The MiNET plugins development organization.
-  bio       : "----------"
+  bio       : "---------"
   thumb     : /images/piea_logo.jpg
   email     : deet1022@gmail.com
   url       : https://piea.github.io
